fix whitespace and add feta to humus sandwich

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,12 @@
   max-width: 1170px;
   margin: 0 auto;
 }
+
+html,
+body {
+  width: 100%;
+  height: auto;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
